<resources>
    <string name="app_name" translatable="false">QuotationShake</string>


    <string name="get_option">Get Quotations</string>
    <string name="favourite_option">Favourite Quotations</string>
    <string name="settings_option">Settings</string>
    <string name="about_option">About</string>


    <string name="settings_title">Settings</string>

    <string name="settings_name_label">Name that identifies the user</string>
    <string name="settings_name_hint">Insert your name</string>

    <string name="settings_language_label">Quotations will be received in the selected language</string>
    <string name="settings_language_eng">English</string>
    <string name="settings_language_rus">Russian</string>

    <string name="settings_http_method_label">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_http_method_get" translatable="false">GET</string>
    <string name="settings_http_method_post" translatable="false">POST</string>

    <string name="settings_database_section_title">Databases</string>
    <string name="settings_database_label">The following database access provider will be used</string>
    <string name="settings_database_room" translatable="false">Room</string>
    <string name="settings_database_helper" translatable="false">SQLiteOpenHelper</string>


    <string name="about_title">About</string>
    <string name="about_data">Quotation Shake by\n\nAlejandro Gomez\n\nhttps://github.com/algono\n\n2020</string>
    <string name="about_image_content_description">The app\'s icon</string>


    <string name="favourite_title">Favourite quotations</string>
    <string name="favourite_author_info">Author info</string>

    <string name="favourite_menu_clear_all">Clear All</string>
    <string name="confirmation_clear_all_quotations">Are you sure that you want to delete ALL your favourite quotations?</string>

    <string name="confirmation_delete_quotation">Are you sure that you want to delete this quotation?</string>
    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_no">No</string>

    <string name="author_anonymous">Anonymous</string>

    <string name="exception_anonymous_author">The author is anonymous.\nInfo not available.</string>
    <string name="exception_unsupported_encoding_author">The author\'s name was not recognised.\nInfo not available.</string>


    <string name="quotation_title">Random quotations</string>

    <string name="quotation_hello">Hello %1s!\nPress refresh to get a new quotation!</string>
    <string name="quotation_default_username">Nameless One</string>

    <string name="quotation_sample_quote">Sample quote %1$d</string>
    <string name="quotation_sample_author">Sample author %1$d</string>

    <string name="quotation_refresh_button_content_description">Press to get a random quotation</string>

    <string name="quotation_menu_add_item">Add</string>
    <string name="quotation_menu_refresh_item">Refresh</string>

    <string name="internet_not_available">Internet connection is not available.</string>
    <string name="quotation_fetching_failed">Something failed while trying to fetch a new quotation.\n\nWait a few seconds and try again.</string>
</resources>
