<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="username"
        android:title="@string/settings_name_label" />
    <PreferenceCategory>
        <ListPreference
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="settings_language"
            android:title="@string/settings_language_label"
            app:singleLineTitle="false" />
        <ListPreference
            android:entries="@array/http_methods"
            android:entryValues="@array/http_methods"
            android:key="settings_http_method"
            android:title="@string/settings_http_method_label"
            app:singleLineTitle="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_database_section_title">
        <ListPreference
            android:entries="@array/databases"
            android:entryValues="@array/databases"
            android:key="settings_database"
            android:title="@string/settings_database_label"
            app:singleLineTitle="false" />
    </PreferenceCategory>
</PreferenceScreen>